--- a/Barometer2a.ipynb
+++ b/Barometer2a.ipynb
@@ -337,7 +337,7 @@
    "source": [
     "bardabunga <- read.table(\"cpx_bardabunga.txt\",sep=\"\\t\",header=TRUE)\n",
     "\n",
-    "bardabunga.pressure <- predict(Model,X1=bardabunga$MgO/12,X2=bardabunga$Al2O3/4)\n",
+    "bardabunga.pressure <- predict(Model,X1=bardabunga$MgO,X2=bardabunga$Al2O3)\n",
     "\n",
     "hist(bardabunga.pressure,xlab=\"Pressure (GPa)\",main=\"Predicted pressure for Bardabunga Cpx\",breaks = 50)"
    ]
