--- a/2B_Random-forest.ipynb
+++ b/2B_Random-forest.ipynb
@@ -16,10 +16,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "also installing the dependencies ‘numDeriv’, ‘openxlsx’, ‘minqa’, ‘nloptr’, ‘statmod’, ‘carData’, ‘abind’, ‘pbkrtest’, ‘rio’, ‘lme4’, ‘checkmate’, ‘matrixStats’, ‘ggplot2’, ‘broom’, ‘corrplot’, ‘car’, ‘RcppEigen’, ‘pcaPP’, ‘Formula’, ‘latticeExtra’, ‘htmlTable’, ‘gamlss.data’, ‘DEoptimR’, ‘SparseM’, ‘MatrixModels’, ‘conquer’, ‘htmlwidgets’, ‘ggrepel’, ‘ggsci’, ‘cowplot’, ‘ggsignif’, ‘polynom’, ‘rstatix’, ‘RPEIF’, ‘RPEGLMEN’, ‘fit.models’, ‘pyinit’, ‘rrcov’, ‘shinyjs’, ‘dygraphs’, ‘Hmisc’, ‘gamlss’, ‘gamlss.dist’, ‘robustbase’, ‘quantreg’, ‘tinytest’, ‘googleVis’, ‘plotly’, ‘ggpubr’, ‘RPESE’, ‘R.rsp’, ‘RobStatTM’\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  There is a binary version available but the source version is later:\n",
+      "      binary source needs_compilation\n",
+      "RPESE  1.1.0  1.2.0             FALSE\n",
+      "\n",
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\t/var/folders/sm/gtttz5px32s7vkqlhdjjxn6m0000gn/T//RtmppWREME/downloaded_packages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "installing the source package ‘RPESE’\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\t/var/folders/sm/gtttz5px32s7vkqlhdjjxn6m0000gn/T//RtmppWREME/downloaded_packages\n",
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\t/var/folders/sm/gtttz5px32s7vkqlhdjjxn6m0000gn/T//RtmppWREME/downloaded_packages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: xts\n",
+      "\n",
+      "Loading required package: zoo\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘zoo’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    as.Date, as.Date.numeric\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘PerformanceAnalytics’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:graphics’:\n",
+      "\n",
+      "    legend\n",
+      "\n",
+      "\n",
+      "randomForest 4.6-14\n",
+      "\n",
+      "Type rfNews() to see new features/changes/bug fixes.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
+    "install.packages(\"PerformanceAnalytics\")\n",
+    "install.packages(\"randomForest\")\n",
+    "install.packages(\"PeriodicTable\")\n",
+    "\n",
     "library(PerformanceAnalytics)\n",
     "library(randomForest)\n",
     "library(PeriodicTable)"
